--- a/style.css
+++ b/style.css
@@ -44,3 +44,32 @@ body
     background: #fff;
     padding: 40px;
 }
+
+.profile_text 
+{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 20px;
+    border-bottom: 1px solid rgba(255,255,255,0.2);
+}
+
+.profile_text .image_box 
+{
+    position: relative;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.profile_text .image_box img
+{
+    position: absolute;
+    top : 0;
+    left : 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
