--- a/style.css
+++ b/style.css
@@ -150,3 +150,29 @@ body
     font-weight: 300;
 
 }
+
+.languages_info ul li 
+{
+    color: #fff;
+    font-weight: 300; 
+    list-style: none;
+}
+
+.languages_info .percent
+{
+  position: relative;  
+  width: 100%;
+  height: 6px;
+  background: #081921;
+  display: block;
+  margin-top: 5px;
+}
+
+.languages_info .percent div
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    background: #03a9f4;
+}
